--- a/src/languages/de.json
+++ b/src/languages/de.json
@@ -24,6 +24,7 @@
   "result-list1": "Sie haben einen Experten in Ihrer Ecke, der Sie Schritt für Schritt beim Schlafen Ihres Babys unterstützt",
   "result-list2": "Sie legen Ihr Baby Tag und Nacht in ihre eigene Wiege und wissen, dass sie glücklich und unabhängig einschlafen werden.",
   "result-list3": "Den Schlaf zu bekommen, den SIE verdienen, um die liebevollste und ruhigste Mutter zu sein, die Ihre Kinder verdienen",
+  "result-button": "zu den Services",
   "services-header": "Leistungen",
   "services-pregnancy": "Schwangerschaftsratgeber",
   "services-newborn": "Neugeborenen Routine",
@@ -37,12 +38,18 @@
   "info-button": "Mehr erfahren",
   "packages-routines": "Routinen",
   "packages-pregnancy-description": "Ein komplettes Paket, das Ihnen eine schöne Methode in der Hand gibt, die Sie vom ersten Tag bis zum dritten Lebensjahr anwenden können. Es zeigt Ihnen, wie Sie Ihrem Baby vom ersten Tag an auf liebevollste Weise den Schlaf beibringen können. Dazu gehören:",
-  "packages-pregnancy-lis1": "Einschlafmethoden",
-  "packages-pregnancy-lis2": "Neugeborenen-Routine",
-  "packages-pregnancy-lis3": "Routine von 16 Wochen bis 3 Jahren",
+  "packages-includes": "Dazu gehören:",
+  "packages-pregnancy-list1": "Einschlafmethoden",
+  "packages-pregnancy-list2": "Neugeborenen-Routine",
+  "packages-pregnancy-list3": "Routine von 16 Wochen bis 3 Jahren",
   "packages-button": "Buchen",
   "packages-consulting": "Beratungen",
   "contact-header": "Kontakt",
   "contact-text": "Wenn Sie sich nicht sicher sind, welches Paket am besten zu Ihren Bedürfnissen passt, buchen Sie einen kostenlosen Info-Call.",
-  "contact-button": "Info-Call buchen"
+  "contact-button": "Info-Call buchen",
+  "footer-discovery": "Info-Call",
+  "footer-impressum": "Impressum",
+  "footer-term": "Terms and conditions",
+  "footer-privacy": "Privacy Policy",
+  "footer-cookie": "Cookie Policy (EU)"
 }
