made services, packages and about subpage responsible

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -46,5 +46,10 @@
   "packages-consulting": "Consultations",
   "contact-header": "Contact",
   "contact-text": "If you are uncertain which package fits your needs the best, book a free discovery call.",
-  "contact-button": "Book your free discovery call"
+  "contact-button": "Book your free discovery call",
+  "footer-discovery": "Discovery Call",
+  "footer-impressum": "Impressum",
+  "footer-term": "Terms and conditions",
+  "footer-privacy": "Privacy Policy",
+  "footer-cookie": "Cookie Policy (EU)"
 }
