created and styled process and result components

--- a/src/languages/de.json
+++ b/src/languages/de.json
@@ -14,11 +14,11 @@
   "problems-button": "Ja, ich brauche Hilfe",
   "process-header": "Wie funktioniert es?",
   "process-text": "Bei EasyNap verfolgen wir immer einen hollistischen Ansatz. Wir überprüfen Ihre tägliche Routine, Fütterung, Raumtemperatur, Nachtwäsche usw. in den folgenden Schritten:",
-  "process-list1": "0. vereinbaren Sie einen kostenlosen Info-Call (optional)",
-  "process-list2": "1. Buchen Sie Ihr Beratungsgespräch online",
-  "process-list3": "2. Fragebogen ausfüllen",
-  "process-list4": "3. 45-minütiges Gespräch mit individuellem Schlafplan",
-  "process-list5": "4. Überwachungsunterstützung",
+  "process-list1": "Vereinbaren Sie einen kostenlosen Info-Call (optional)",
+  "process-list2": "Buchen Sie Ihr Beratungsgespräch online",
+  "process-list3": "Fragebogen ausfüllen",
+  "process-list4": "45-minütiges Gespräch mit individuellem Schlafplan",
+  "process-list5": "Überwachungsunterstützung",
   "process-button": "zu den Services",
   "result-header": "Stellen Sie sich vor...",
   "result-list1": "Sie haben einen Experten in Ihrer Ecke, der Sie Schritt für Schritt beim Schlafen Ihres Babys unterstützt",
