--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -14,11 +14,11 @@
   "problems-button": "Yes please, help me",
   "process-header": "How it works?",
   "process-text": "At EasyNap we always take a hollistic approach. We review your daily routine, feeding, room temperature, sleepwear etc. in the following steps:",
-  "process-list1": "0. schedule a free discovery call (optional)",
-  "process-list2": "1. book your consultation online",
-  "process-list3": "2. fill in a questionnaire",
-  "process-list4": "3. 45 min call with customised sleep plan",
-  "process-list5": "4. monitoring support",
+  "process-list1": "schedule a free discovery call (optional)",
+  "process-list2": "book your consultation online",
+  "process-list3": "fill in a questionnaire",
+  "process-list4": "45 min call with customised sleep plan",
+  "process-list5": "monitoring support",
   "process-button": "Check out the packages",
   "result-header": "Just imagine...",
   "result-list1": "You have an expert in your corner assisting you step by step with your baby´s sleep",
