--- a/src/languages/hu.json
+++ b/src/languages/hu.json
@@ -15,11 +15,11 @@
   "problems-button": "Kérlek segíts!",
   "process-header": "Hogyan működik?",
   "process-text": "Az EasyNapnál mindig holisztikus megközelítést alkalmazunk. Áttekintjük a napi rutint, az etetést, a szobahőmérsékletet, a hálóruhát stb. a következő lépésekben:",
-  "process-list1": "0. egyeztess egy ingyenes info-hivást (opcionális)",
-  "process-list2": "1. foglalj online konzultációt",
-  "process-list3": "2. kérdőív kitöltése",
-  "process-list4": "3. 45 perces online beszélgetés személyre szabott alvási tervvel",
-  "process-list5": "4. Nyomonkövetés",
+  "process-list1": "egyeztess egy ingyenes info-hivást (opcionális)",
+  "process-list2": "foglalj online konzultációt",
+  "process-list3": "kérdőív kitöltése",
+  "process-list4": "45 perces online beszélgetés személyre szabott alvási tervvel",
+  "process-list5": "Nyomonkövetés",
   "process-button": "A szolgáltatásokhoz",
   "result-header": "Képzeld csak el...",
   "result-list1": "Áll melletted egy szakértő, aki lépésről lépésre segít a baba alvásában",
